@@ -1,11 +1,12 @@
 /*
- * $Id: ExpVectorLong.java 3994 2012-07-15 11:50:54Z kredel $
+ * $Id: ExpVectorLong.java 4125 2012-08-19 19:05:22Z kredel $
  */
 
 package edu.jas.poly;
 
 
-import java.util.Vector;
+import java.util.List;
+import java.util.ArrayList;
 
 
 /**
@@ -68,7 +69,7 @@ public class ExpVectorLong extends ExpVector
     public ExpVectorLong(String s) throws NumberFormatException {
         super();
         // first format = (1,2,3,4,5,6,7)
-        Vector<Long> exps = new Vector<Long>();
+        List<Long> exps = new ArrayList<Long>();
         s = s.trim();
         int b = s.indexOf('(');
         int e = s.indexOf(')', b + 1);
@@ -80,18 +81,18 @@ public class ExpVectorLong extends ExpVector
             while ((k = s.indexOf(',', b)) >= 0) {
                 teil = s.substring(b, k);
                 a = Long.parseLong(teil);
-                exps.add(new Long(a));
+                exps.add(Long.valueOf(a));
                 b = k + 1;
             }
             if (b <= e) {
                 teil = s.substring(b, e);
                 a = Long.parseLong(teil);
-                exps.add(new Long(a));
+                exps.add(Long.valueOf(a));
             }
             int length = exps.size();
             val = new long[length];
             for (int j = 0; j < length; j++) {
-                val[j] = exps.elementAt(j).longValue();
+                val[j] = exps.get(j).longValue();
             }
         } else {
             // not implemented
@@ -108,7 +109,7 @@ public class ExpVectorLong extends ExpVector
      * @see java.lang.Object#clone()
      */
     @Override
-    public ExpVectorLong clone() {
+    public ExpVectorLong copy() {
         long[] w = new long[val.length];
         System.arraycopy(val, 0, w, 0, val.length);
         return new ExpVectorLong(w);
@@ -303,12 +304,12 @@ public class ExpVectorLong extends ExpVector
     }
 
 
-    /** hashCode for this exponent vector.
-     * @see java.lang.Object#hashCode()
-     * Only for findbugs.
+    /**
+     * hashCode for this exponent vector.
+     * @see java.lang.Object#hashCode() Only for findbugs.
      */
     @Override
-    public int hashCode() { 
+    public int hashCode() {
         return super.hashCode();
     }
 
@@ -393,7 +394,8 @@ public class ExpVectorLong extends ExpVector
      */
     @Override
     public ExpVectorLong subst(int i, long d) {
-        ExpVectorLong V = (ExpVectorLong) this.clone();
+        ExpVectorLong V = this.copy();
+        @SuppressWarnings("unused")
         long e = V.setVal(i, d);
         return V;
         //return EVSU(this, i, d);
@@ -569,8 +571,8 @@ public class ExpVectorLong extends ExpVector
      * @param V
      * @return 0 if U == V, -1 if U &lt; V, 1 if U &gt; V.
      */
-    //@Override
-    public int compareTo(ExpVectorLong V) {
+    @Override
+    public int compareTo(ExpVector V) {
         return this.invLexCompareTo(V);
     }
 
